feat: created navbar and styles for fonts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="robots" content="index, follow">
+    <meta property="og:image" content="../assets/img/logo/logoIcon.png">
+    <meta property="og:title" content="ServiçosJá">
+    <meta property="og:description" content="Encontre prestadores de serviços qualificados perto de você em todas as categorias. Cadastre-se gratuitamente e seja encontrado na sua região!">
+    <meta name="description" content="Encontre prestadores de serviços qualificados perto de você em todas as categorias. Cadastre-se gratuitamente e seja encontrado na sua região!"/>
+    <link rel="shortcut icon" href="/img/logo/logoIcon.png" type="image/x-icon">
+    <title>ServiçosJá</title>
   </head>
   <body>
     <div id="root"></div>
